# bnmf-pipeline

./: README.md  bnmf_pieline_conda_env.yaml  pyproject.toml
bnmf_pipeline/: 0_nbmnf_clusterin_data_preparation.sh  1_custome_nbmnf_clustering.py  README.md  __init__.py  bnmf_pieline_conda_env.yaml  bnmf_pipeline.py  cli.py  conda_env.yaml  main.py  process_main_sumstat.py  process_traits_sumstat.py  test_run.sh  utilities.py
bnmf_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bnmf_pipeline/R/: bnmf_clustering_pipeline.r  format_bNMF_results.Rmd  format_bNMF_results_original.Rmd  run_bNMF_2025.r  run_bnmf_cli.R  testnvmix.r  utilities.R
bnmf_pipeline/archived/: bnmf_clustering_pipeline_original.r  custome_nbmnf_clustering_original_data_preparation.py
